--- a/index.html
+++ b/index.html
@@ -35,18 +35,10 @@
       <ul>
         <li><strong>Offline mode:</strong> When you’re offline, currency rates may be loaded from cache and can be outdated.</li>
         <li><strong>Rates look wrong:</strong> Check your internet connection and reopen the app to refresh rates.</li>
-        <li><strong>How to restore purchases:</strong> Open the app → Settings → Restore Purchases (if available).</li>
-        <li><strong>Cancel a subscription:</strong> Manage it in iOS Settings → Apple ID → Subscriptions.</li>
+      <!--  <li><strong>How to restore purchases:</strong> Open the app → Settings → Restore Purchases (if available).</li>
+        <li><strong>Cancel a subscription:</strong> Manage it in iOS Settings → Apple ID → Subscriptions.</li> 
+        -->
       </ul>
-    </div>
-
-    <div class="card">
-      <h2>Privacy</h2>
-      <p>
-        <span class="pill"><a href="PRIVACY_POLICY_URL">Privacy Policy</a></span>
-        <span class="pill"><a href="TERMS_URL">Terms</a></span>
-      </p>
-      <p class="muted">If you don’t have these pages yet, you can temporarily link to a Notion/Google Doc page and replace later.</p>
     </div>
   </div>
 </body>
